refactor: add system transactions to callback and create unit tests
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>