@@ -16,16 +16,24 @@
 
 package com.swirlds.demo.platform;
 
+import static com.hedera.hapi.platform.event.EventTransaction.TransactionOneOfType.APPLICATION_TRANSACTION;
+import static com.hedera.hapi.platform.event.EventTransaction.TransactionOneOfType.STATE_SIGNATURE_TRANSACTION;
 import static com.swirlds.platform.test.fixtures.state.FakeStateLifecycles.FAKE_MERKLE_STATE_LIFECYCLES;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
 import com.google.protobuf.ByteString;
 import com.hedera.hapi.node.base.SemanticVersion;
+import com.hedera.hapi.node.base.Timestamp;
 import com.hedera.hapi.node.state.roster.Roster;
+import com.hedera.hapi.platform.event.EventCore;
+import com.hedera.hapi.platform.event.EventTransaction;
+import com.hedera.hapi.platform.event.GossipEvent;
 import com.hedera.hapi.platform.event.StateSignatureTransaction;
+import com.hedera.pbj.runtime.OneOf;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.common.context.PlatformContext;
 import com.swirlds.common.crypto.Hash;
@@ -34,12 +42,20 @@ import com.swirlds.common.metrics.platform.DefaultPlatformMetrics;
 import com.swirlds.common.platform.NodeId;
 import com.swirlds.common.test.fixtures.Randotron;
 import com.swirlds.demo.platform.fs.stresstest.proto.RandomBytesTransaction;
+import com.swirlds.demo.platform.fs.stresstest.proto.TestTransaction;
+import com.swirlds.demo.platform.fs.stresstest.proto.TestTransactionWrapper;
+import com.swirlds.platform.ParameterProvider;
 import com.swirlds.platform.components.transaction.system.ScopedSystemTransaction;
+import com.swirlds.platform.consensus.ConsensusSnapshot;
+import com.swirlds.platform.consensus.EventWindow;
 import com.swirlds.platform.crypto.KeyGeneratingException;
 import com.swirlds.platform.crypto.KeysAndCerts;
 import com.swirlds.platform.crypto.PlatformSigner;
 import com.swirlds.platform.crypto.PublicStores;
+import com.swirlds.platform.event.AncientMode;
 import com.swirlds.platform.event.PlatformEvent;
+import com.swirlds.platform.gossip.shadowgraph.Generations;
+import com.swirlds.platform.internal.ConsensusRound;
 import com.swirlds.platform.state.PlatformStateModifier;
 import com.swirlds.platform.system.BasicSoftwareVersion;
 import com.swirlds.platform.system.InitTrigger;
@@ -59,64 +75,57 @@ import java.util.List;
 import java.util.Random;
 import java.util.concurrent.Future;
 import java.util.function.Consumer;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.MockedStatic;
 
 public class PlatformTestingToolStateTest {
 
     private static PlatformTestingToolState state;
     private static BasicSoftwareVersion softwareVersion;
     private static final byte[] EMPTY_ARRAY = new byte[] {};
+    private PlatformTestingToolMain main;
     private Random random;
     private PlatformStateModifier platformStateModifier;
     private Round round;
+    private Roster roster;
     private ConsensusEvent event;
+    private PlatformEvent platformEvent;
     private Consumer<ScopedSystemTransaction<StateSignatureTransaction>> consumer;
     private List<ScopedSystemTransaction<StateSignatureTransaction>> consumedSystemTransactions;
     private Transaction transaction;
     private StateSignatureTransaction stateSignatureTransaction;
+    private static MockedStatic<ParameterProvider> parameterProvider;
+    private static ParameterProvider parameterProviderInstance;
 
     @BeforeAll
     static void initState() {
-        final var platformContext = mock(PlatformContext.class);
-        final var metrics = mock(DefaultPlatformMetrics.class);
-        final var cryptography = mock(MerkleCryptoEngine.class);
-        final var roster = mock(Roster.class);
-        final var platform = mock(Platform.class);
-        final var initTrigger = InitTrigger.GENESIS;
-        final var futureHash = mock(Future.class);
-
-        when(platform.getRoster()).thenReturn(roster);
-        when(platform.getSelfId()).thenReturn(NodeId.of(1L));
-        when(platform.getRoster()).thenReturn(roster);
-        when(platformContext.getMetrics()).thenReturn(metrics);
-        when(platformContext.getMerkleCryptography()).thenReturn(cryptography);
-        when(platform.getContext()).thenReturn(platformContext);
-        when(platformContext.getMerkleCryptography()).thenReturn(cryptography);
-        when(cryptography.digestTreeAsync(any())).thenReturn(futureHash);
+        final var payloadConfig = mock(PayloadCfgSimple.class);
+        when(payloadConfig.isAppendSig()).thenReturn(true);
 
         softwareVersion = new BasicSoftwareVersion(1);
         state = new PlatformTestingToolState(
                 FAKE_MERKLE_STATE_LIFECYCLES,
                 version -> new BasicSoftwareVersion(softwareVersion.getSoftwareVersion()));
         FAKE_MERKLE_STATE_LIFECYCLES.initStates(state);
-        state.init(platform, initTrigger, softwareVersion);
     }
 
     @BeforeEach
     void setUp() throws KeyStoreException, KeyGeneratingException, NoSuchAlgorithmException, NoSuchProviderException {
+        main = new PlatformTestingToolMain();
         random = new Random();
         platformStateModifier = mock(PlatformStateModifier.class);
-        event = mock(PlatformEvent.class);
-
-        when(event.transactionIterator()).thenReturn(Collections.emptyIterator());
-        round = mock(Round.class);
+        roster = new Roster(Collections.EMPTY_LIST);
+        transaction = mock(TransactionWrapper.class);
+        when(transaction.isSystem()).thenReturn(false);
+        platformEvent = mock(PlatformEvent.class);
 
         consumedSystemTransactions = new ArrayList<>();
         consumer = systemTransaction -> consumedSystemTransactions.add(systemTransaction);
-        transaction = mock(TransactionWrapper.class);
 
         final Randotron randotron = Randotron.create();
 
@@ -132,22 +141,44 @@ public class PlatformTestingToolStateTest {
                 .signature(signature)
                 .hash(stateHash.getBytes())
                 .build();
+
+        final var platform = mock(Platform.class);
+        final var initTrigger = InitTrigger.GENESIS;
+        final var futureHash = mock(Future.class);
+
+        final var platformContext = mock(PlatformContext.class);
+        final var metrics = mock(DefaultPlatformMetrics.class);
+        final var cryptography = mock(MerkleCryptoEngine.class);
+        when(platform.getRoster()).thenReturn(roster);
+        when(platform.getSelfId()).thenReturn(NodeId.of(1L));
+        when(platform.getRoster()).thenReturn(roster);
+        when(platformContext.getMetrics()).thenReturn(metrics);
+        when(platformContext.getMerkleCryptography()).thenReturn(cryptography);
+        when(platform.getContext()).thenReturn(platformContext);
+        when(platformContext.getMerkleCryptography()).thenReturn(cryptography);
+        when(cryptography.digestTreeAsync(any())).thenReturn(futureHash);
+
+        parameterProvider = mockStatic(ParameterProvider.class);
+        parameterProviderInstance = mock(ParameterProvider.class);
+        parameterProvider.when(ParameterProvider::getInstance).thenReturn(parameterProviderInstance);
+        when(parameterProviderInstance.getParameters()).thenReturn(new String[] {"configs/FCM1KForTest.json"});
+        state.init(platform, initTrigger, softwareVersion);
+        state.initChildren();
+    }
+
+    @AfterEach
+    void tearDown() {
+        parameterProvider.close();
     }
 
     @ParameterizedTest
     @ValueSource(ints = {0, 100, 440, 600})
-    void handleConsensusRoundWithApplicationTransaction(final Integer transactionSize) {
+    void handleConsensusRoundWithApplicationTransactionOfRandomType(final Integer transactionSize) {
         // Given
         givenRoundAndEvent();
 
-        final byte[] transactionBytes = new byte[transactionSize];
-        random.nextBytes(transactionBytes);
-        final var randomBytesTransaction = RandomBytesTransaction.newBuilder()
-                .setIsInserSeq(true)
-                .setData(ByteString.copyFrom(transactionBytes))
-                .build();
-
-        when(transaction.getApplicationTransaction()).thenReturn(Bytes.wrap(randomBytesTransaction.toByteArray()));
+        final TestTransactionWrapper testTransactionWrapper = getRandomTransaction(transactionSize);
+        when(transaction.getApplicationTransaction()).thenReturn(Bytes.wrap(testTransactionWrapper.toByteArray()));
 
         // When
         state.handleConsensusRound(round, platformStateModifier, consumer);
@@ -156,13 +187,189 @@ public class PlatformTestingToolStateTest {
         assertThat(consumedSystemTransactions.size()).isZero();
     }
 
+    @Test
+    void handleConsensusRoundWithSystemTransaction() {
+        // Given
+        givenRoundAndEvent();
+
+        final var stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
+        when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
+
+        // When
+        state.handleConsensusRound(round, platformStateModifier, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isEqualTo(1);
+    }
+
+    @Test
+    void handleConsensusRoundWithMultipleSystemTransaction() {
+        // Given
+        givenRoundAndEvent();
+        final var secondConsensusTransaction = mock(TransactionWrapper.class);
+        final var thirdConsensusTransaction = mock(TransactionWrapper.class);
+        when(platformEvent.consensusTransactionIterator())
+                .thenReturn(List.of(
+                                (ConsensusTransaction) transaction,
+                                secondConsensusTransaction,
+                                thirdConsensusTransaction)
+                        .iterator());
+
+        final var stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
+
+        when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
+        when(secondConsensusTransaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
+        when(thirdConsensusTransaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
+
+        // When
+        state.handleConsensusRound(round, platformStateModifier, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isEqualTo(3);
+    }
+
+    @Test
+    void handleConsensusRoundWithDeprecatedSystemTransaction() {
+        // Given
+        givenRoundAndEvent();
+
+        when(transaction.getApplicationTransaction()).thenReturn(Bytes.EMPTY);
+        when(transaction.isSystem()).thenReturn(true);
+
+        // When
+        state.handleConsensusRound(round, platformStateModifier, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isZero();
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {100, 440, 600})
+    void preHandleConsensusRoundWithApplicationTransactionOfRandomType(final Integer transactionSize) {
+        // Given
+        givenRoundAndEvent();
+
+        final TestTransactionWrapper testTransactionWrapper = getRandomTransaction(transactionSize);
+
+        final var eventTransaction = new EventTransaction(
+                new OneOf<>(APPLICATION_TRANSACTION, Bytes.wrap(testTransactionWrapper.toByteArray())));
+        final var eventCore = mock(EventCore.class);
+        final var gossipEvent = new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
+        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
+        platformEvent = new PlatformEvent(gossipEvent);
+
+        // When
+        state.preHandle(platformEvent, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isZero();
+    }
+
+    @Test
+    void preHandleConsensusRoundWithSystemTransaction() {
+        // Given
+        givenRoundAndEvent();
+
+        final var stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
+        final var eventTransaction =
+                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
+        final var eventCore = mock(EventCore.class);
+        final var gossipEvent = new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
+        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
+        event = new PlatformEvent(gossipEvent);
+
+        // When
+        state.preHandle(event, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isEqualTo(1);
+    }
+
+    @Test
+    void preHandleConsensusRoundWithMultipleSystemTransaction() {
+        // Given
+        final var stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
+
+        final var eventTransaction =
+                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
+        final var secondEventTransaction =
+                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
+        final var thirdEventTransaction =
+                new EventTransaction(new OneOf<>(APPLICATION_TRANSACTION, stateSignatureTransactionBytes));
+        final var eventCore = mock(EventCore.class);
+        final var gossipEvent = new GossipEvent(
+                eventCore,
+                null,
+                List.of(eventTransaction, secondEventTransaction, thirdEventTransaction),
+                Collections.emptyList());
+        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
+        event = new PlatformEvent(gossipEvent);
+
+        // When
+        state.preHandle(event, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isEqualTo(3);
+    }
+
+    @Test
+    void preHandleConsensusRoundWithDeprecatedSystemTransaction() {
+        // Given
+        givenRoundAndEvent();
+        when(transaction.isSystem()).thenReturn(true);
+
+        final var stateSignatureTransactionBytes = main.encodeSystemTransaction(stateSignatureTransaction);
+        final var eventTransaction =
+                new EventTransaction(new OneOf<>(STATE_SIGNATURE_TRANSACTION, stateSignatureTransactionBytes));
+        final var eventCore = mock(EventCore.class);
+        final var gossipEvent = new GossipEvent(eventCore, null, List.of(eventTransaction), Collections.emptyList());
+        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
+        event = new PlatformEvent(gossipEvent);
+
+        // When
+        state.preHandle(event, consumer);
+
+        // Then
+        assertThat(consumedSystemTransactions.size()).isZero();
+    }
+
     private void givenRoundAndEvent() {
-        when(event.getCreatorId()).thenReturn(new NodeId());
-        when(event.getSoftwareVersion()).thenReturn(new SemanticVersion(1, 1, 1, "", ""));
-        when(event.getConsensusTimestamp()).thenReturn(Instant.now());
-        when(event.consensusTransactionIterator())
+        when(platformEvent.getCreatorId()).thenReturn(new NodeId());
+        when(platformEvent.getSoftwareVersion()).thenReturn(new SemanticVersion(1, 1, 1, "", ""));
+        when(platformEvent.getConsensusTimestamp()).thenReturn(Instant.now());
+        when(platformEvent.transactionIterator())
+                .thenReturn(Collections.singletonList(transaction).iterator());
+        when(platformEvent.consensusTransactionIterator())
                 .thenReturn(Collections.singletonList((ConsensusTransaction) transaction)
                         .iterator());
-        when(round.iterator()).thenReturn(Collections.singletonList(event).iterator());
+
+        final var eventWindow = new EventWindow(10, 5, 20, AncientMode.BIRTH_ROUND_THRESHOLD);
+        round = new ConsensusRound(
+                roster,
+                List.of(platformEvent),
+                platformEvent,
+                new Generations(),
+                eventWindow,
+                new ConsensusSnapshot(),
+                false,
+                Instant.now());
+    }
+
+    private TestTransactionWrapper getRandomTransaction(final int transactionSize) {
+        final byte[] transactionBytes = new byte[transactionSize];
+        random.nextBytes(transactionBytes);
+
+        final var randomBytesTransaction = RandomBytesTransaction.newBuilder()
+                .setIsInserSeq(false)
+                .setData(ByteString.copyFrom(transactionBytes))
+                .build();
+
+        final TestTransaction testTransaction = TestTransaction.newBuilder()
+                .setBytesTransaction(randomBytesTransaction)
+                .build();
+
+        return TestTransactionWrapper.newBuilder()
+                .setTestTransactionRawBytes(ByteString.copyFrom(testTransaction.toByteArray()))
+                .build();
     }
 }
